<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/multipurpose_background"
    tools:context=".SignIn">


  <EditText
      android:id="@+id/edtPhone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="256dp"
      android:ems="10"
      android:importantForAutofill="yes"
      android:inputType="phone"
      android:minHeight="48dp"
      android:textAlignment="center"
      android:textColorHint="#6D4C41"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:hint="@string/phonenum"
      tools:hint="Ex:0123456789" />

  <EditText
      android:id="@+id/edtPassword"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="32dp"
      android:ems="10"
      android:hint="@string/password"
      android:importantForAutofill="yes"
      android:inputType="textPassword"
      android:minHeight="48dp"
      android:textAlignment="center"
      android:textColorHint="#6D4C41"
      app:layout_constraintEnd_toEndOf="@+id/edtPhone"
      app:layout_constraintStart_toStartOf="@+id/edtPhone"
      app:layout_constraintTop_toBottomOf="@+id/edtPhone" />

  <Button
      android:id="@+id/bt_acceptSignIn"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginBottom="64dp"
      android:text="@string/acceptsignin"
      android:background="@drawable/custom_button"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/edtPassword"
      app:layout_constraintStart_toStartOf="@+id/edtPassword" />

  <TextView
      android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="128dp"
      android:autoText="false"
      android:text="Đăng nhập"
      android:textAllCaps="true"
      android:textSize="32sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>